--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/png" href="./assets/img/favicon-32x32.png"/>
     <title>Password Generator</title>
-    <link rel="stylesheet" href="./Develop/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -30,6 +31,6 @@
         </div>
       </div>
     </div>
-    <script src="./Develop/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
